[gd_scene load_steps=96 format=2]

[ext_resource path="res://src/Characters/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/art/characters/Character.png" type="Texture" id=2]
[ext_resource path="res://src/Characters/State.gd" type="Script" id=3]
[ext_resource path="res://src/Characters/State.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Characters/AnimationTree.gd" type="Script" id=6]
[ext_resource path="res://src/Characters/Effects.gd" type="Script" id=7]
[ext_resource path="res://src/Characters/Camera.gd" type="Script" id=8]
[ext_resource path="res://src/Characters/Action_Handler.gd" type="Script" id=9]
[ext_resource path="res://src/Characters/Ray.gd" type="Script" id=10]
[ext_resource path="res://assets/art/ball/dust.png" type="Texture" id=11]
[ext_resource path="res://src/Effects/DustParticle.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Characters/Ball_Handler.gd" type="Script" id=13]
[ext_resource path="res://src/Effects/GhostHandler.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/Characters/Actions/Side.gd" type="Script" id=15]
[ext_resource path="res://src/Characters/Actions/Jump.gd" type="Script" id=16]
[ext_resource path="res://src/Characters/Actions/Walljump.gd" type="Script" id=17]
[ext_resource path="res://src/Characters/Actions/Dunk.gd" type="Script" id=19]
[ext_resource path="res://src/Characters/Actions/Shoot.gd" type="Script" id=20]
[ext_resource path="res://src/Characters/Actions/Dunkjump.gd" type="Script" id=21]
[ext_resource path="res://src/Characters/Actions/Adherence.gd" type="Script" id=23]
[ext_resource path="res://src/Characters/Actions/Crouch.gd" type="Script" id=24]
[ext_resource path="res://src/Effects/TrailHandler.tscn" type="PackedScene" id=25]
[ext_resource path="res://assets/art/effects/trail.png" type="Texture" id=26]
[ext_resource path="res://src/Effects/JumpParticles0.tscn" type="PackedScene" id=27]
[ext_resource path="res://assets/art/effects/offset_glow.png" type="Texture" id=28]
[ext_resource path="res://src/Characters/Actions/Release.gd" type="Script" id=29]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 180.0

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 30.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 26 )

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "air_wall"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "fall_loop"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "floor_wall"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "jump1"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "walk"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "walljump1"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
advance_condition = "walking_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
advance_condition = "jumping_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
advance_condition = "falling_cond"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true
priority = 3

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
advance_condition = "on_floor_cond"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
advance_condition = "on_wall_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
advance_condition = "on_wall_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
advance_condition = "idle_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
advance_condition = "not_on_wall_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
advance_condition = "on_wall_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
advance_condition = "on_wall_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
advance_condition = "on_floor_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
advance_condition = "jumping_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
advance_condition = "not_on_floor_cond"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
advance_condition = "not_on_floor_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
advance_condition = "not_on_wall_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
advance_condition = "on_wall_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
advance_condition = "on_floor_cond"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
advance_condition = "not_on_floor_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
advance_condition = "on_floor_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
advance_condition = "jumping_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
advance_condition = "walljumping_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
advance_condition = "falling_cond"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
advance_condition = "on_floor_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
advance_condition = "on_wall_cond"

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=41]
states/air_wall/node = SubResource( 4 )
states/air_wall/position = Vector2( 93.9985, -254 )
states/fall/node = SubResource( 5 )
states/fall/position = Vector2( 673, -312 )
states/fall_copy/node = SubResource( 6 )
states/fall_copy/position = Vector2( 627.839, -399.582 )
states/fall_loop/node = SubResource( 7 )
states/fall_loop/position = Vector2( 604, -216.066 )
states/floor_wall/node = SubResource( 8 )
states/floor_wall/position = Vector2( 109.998, 203 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 586, 196 )
states/idle_copy/node = SubResource( 10 )
states/idle_copy/position = Vector2( 635.839, 297.138 )
states/jump1/node = SubResource( 11 )
states/jump1/position = Vector2( 350, -111 )
states/walk/node = SubResource( 12 )
states/walk/position = Vector2( 288, 62 )
states/walljump1/node = SubResource( 13 )
states/walljump1/position = Vector2( 350, -185.976 )
transitions = [ "idle", "walk", SubResource( 14 ), "idle", "jump1", SubResource( 15 ), "jump1", "fall", SubResource( 16 ), "fall", "fall_loop", SubResource( 17 ), "fall_loop", "idle", SubResource( 18 ), "jump1", "air_wall", SubResource( 19 ), "walk", "floor_wall", SubResource( 20 ), "walk", "idle", SubResource( 21 ), "air_wall", "fall", SubResource( 22 ), "fall", "air_wall", SubResource( 23 ), "fall_loop", "air_wall", SubResource( 24 ), "air_wall", "floor_wall", SubResource( 25 ), "walk", "jump1", SubResource( 26 ), "idle", "fall", SubResource( 27 ), "walk", "fall", SubResource( 28 ), "floor_wall", "idle", SubResource( 29 ), "idle", "floor_wall", SubResource( 30 ), "fall", "idle", SubResource( 31 ), "floor_wall", "air_wall", SubResource( 32 ), "jump1", "idle", SubResource( 33 ), "floor_wall", "jump1", SubResource( 34 ), "air_wall", "walljump1", SubResource( 35 ), "walljump1", "fall", SubResource( 36 ), "walljump1", "idle", SubResource( 37 ), "walljump1", "air_wall", SubResource( 38 ), "idle_copy", "idle", SubResource( 39 ), "fall_copy", "fall", SubResource( 40 ) ]
start_node = "idle"
graph_offset = Vector2( -266.161, 110.978 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=42]

[sub_resource type="Animation" id=43]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 160, 161, 162, 163 ]
}

[sub_resource type="Animation" id=44]
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 164, 165, 166, 167 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_shooting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.34 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=45]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 209 ]
}

[sub_resource type="Animation" id=46]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 112, 113, 114, 115, 116, 117, 118, 119 ]
}

[sub_resource type="Animation" id=47]
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 80 ]
}

[sub_resource type="Animation" id=48]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_dunking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=49]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_dunkjumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=50]
length = 0.38
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 148, 149 ]
}

[sub_resource type="Animation" id=51]
length = 0.5
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 149, 150, 151, 152 ]
}

[sub_resource type="Animation" id=52]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 128, 129, 130, 131 ]
}

[sub_resource type="Animation" id=53]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 176, 177, 178, 179, 180, 181, 182, 183, 184, 185 ]
}

[sub_resource type="Animation" id=54]
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 132, 133, 134, 135 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_shooting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.34 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=55]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 208 ]
}

[sub_resource type="Animation" id=56]
length = 0.45
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_halfturning")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=57]
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.8, 0.9, 1, 1.6, 1.7, 1.8, 2.4, 2.5, 2.6, 3.3, 3.4, 3.5, 4.1, 4.2, 4.3, 4.9, 5, 5.1, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 7, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 8, 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 201, 202, 203, 203, 204, 200, 201, 202, 203, 203, 204, 200, 201, 202, 203, 203, 204, 200, 201, 202, 203, 203, 204, 200, 192, 193, 194, 195, 196, 197, 198, 199, 192, 193, 194, 195, 196, 197, 198, 199, 192, 193, 194, 195, 196, 197, 198, 199, 200 ]
}

[sub_resource type="Animation" id=58]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 144, 145, 146, 147, 148 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_jumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=59]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 80 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_landing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=60]
length = 0.42
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 96, 97, 98, 99, 100, 101 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_landing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.42 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=61]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=62]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=63]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 144, 145, 146, 147, 148 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../State:is_walljumping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="CanvasItemMaterial" id=64]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=65]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=66]
offsets = PoolRealArray( 0.00858369, 0.424893, 0.824034, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.582031, 0.316025, 0.316025, 1, 1, 0.803528, 0.660156, 1, 2, 1, 2, 1 )

[sub_resource type="Curve" id=67]
_data = [ Vector2( 0, 1 ), 0.0, -1.46686, 0, 0, Vector2( 1, 0.481818 ), 0.95065, 0.0, 0, 0 ]

[sub_resource type="CanvasItemMaterial" id=68]
resource_local_to_scene = true
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="CapsuleShape2D" id=69]
radius = 14.0
height = 28.0

[node name="Character" type="KinematicBody2D"]
z_index = 1
z_as_relative = false
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="State" parent="." instance=ExtResource( 5 )]
visible = false
script = ExtResource( 3 )

[node name="Actions" type="Node2D" parent="."]

[node name="Action_Handler" type="Node2D" parent="Actions"]
visible = false
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Ray_fwd_up" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( 0, -16 )
cast_to = Vector2( 9, 0 )
script = ExtResource( 10 )

[node name="Ray_fwd_down" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( 0, 16 )
cast_to = Vector2( 9, 0 )
script = ExtResource( 10 )

[node name="Ray_fwd_up_f" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( 0, -16 )
cast_to = Vector2( -9, 0 )
script = ExtResource( 10 )

[node name="Ray_fwd_down_f" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( 0, 16 )
cast_to = Vector2( -9, 0 )
script = ExtResource( 10 )

[node name="Ray_up_fwd" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( 8, 0 )
cast_to = Vector2( 0, -20 )
script = ExtResource( 10 )

[node name="Ray_up_bwd" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( -8, 0 )
cast_to = Vector2( 0, -20 )
script = ExtResource( 10 )

[node name="Ray_down_fwd" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( 8, 0 )
cast_to = Vector2( 0, 33 )
script = ExtResource( 10 )

[node name="Ray_down_bwd" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( -8, 0 )
cast_to = Vector2( 0, 33 )
script = ExtResource( 10 )

[node name="Ray_slope_fwd" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( 8, 32 )
cast_to = Vector2( 0, 17 )
script = ExtResource( 10 )

[node name="Ray_slope_bwd" type="RayCast2D" parent="Actions/Action_Handler"]
position = Vector2( -8, 32 )
cast_to = Vector2( 0, 17 )
script = ExtResource( 10 )

[node name="dunkjump_area" type="Area2D" parent="Actions/Action_Handler"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actions/Action_Handler/dunkjump_area"]
modulate = Color( 0.945098, 1, 0, 1 )
position = Vector2( 0, -50 )
shape = SubResource( 1 )

[node name="dunk_area" type="Area2D" parent="Actions/Action_Handler"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actions/Action_Handler/dunk_area"]
modulate = Color( 1, 0.490196, 0.870588, 1 )
shape = SubResource( 2 )

[node name="Side" type="Node" parent="Actions"]
script = ExtResource( 15 )

[node name="Jump" type="Node" parent="Actions"]
script = ExtResource( 16 )

[node name="Walljump" type="Node" parent="Actions"]
script = ExtResource( 17 )

[node name="Crouch" type="Node" parent="Actions"]
script = ExtResource( 24 )

[node name="Dunk" type="Node" parent="Actions"]
script = ExtResource( 19 )

[node name="Dunkjump" type="Node" parent="Actions"]
script = ExtResource( 21 )

[node name="Shoot" type="Node" parent="Actions"]
script = ExtResource( 20 )

[node name="Adherence" type="Node" parent="Actions"]
script = ExtResource( 23 )

[node name="Release" type="Node" parent="Actions"]
script = ExtResource( 29 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 10
z_as_relative = false
texture = ExtResource( 2 )
offset = Vector2( 0.5, 0 )
hframes = 16
vframes = 20
frame = 198
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource( 41 )
anim_player = NodePath("../Player_Animation")
active = true
parameters/playback = SubResource( 42 )
parameters/conditions/falling_cond = false
parameters/conditions/idle_cond = false
parameters/conditions/jumping_cond = false
parameters/conditions/not_on_floor_cond = false
parameters/conditions/not_on_wall_cond = false
parameters/conditions/on_floor_cond = false
parameters/conditions/on_wall_cond = false
parameters/conditions/walking_cond = false
parameters/conditions/walljumping_cond = false
script = ExtResource( 6 )

[node name="Player_Animation" type="AnimationPlayer" parent="Sprite"]
anims/air_aim = SubResource( 43 )
anims/air_shoot = SubResource( 44 )
anims/air_wall = SubResource( 45 )
anims/crouch = SubResource( 46 )
anims/crouch_idle = SubResource( 47 )
anims/dunk = SubResource( 48 )
anims/dunkjump = SubResource( 49 )
anims/fall = SubResource( 50 )
anims/fall_loop = SubResource( 51 )
anims/floor_idle_aim = SubResource( 52 )
anims/floor_run_aim = SubResource( 53 )
anims/floor_shoot = SubResource( 54 )
anims/floor_wall = SubResource( 55 )
anims/halfturn = SubResource( 56 )
anims/idle = SubResource( 57 )
anims/jump1 = SubResource( 58 )
anims/land = SubResource( 59 )
anims/land_roll = SubResource( 60 )
anims/run = SubResource( 61 )
anims/walk = SubResource( 62 )
anims/walljump1 = SubResource( 63 )

[node name="light" type="Sprite" parent="Sprite"]
visible = false
modulate = Color( 1, 1, 1, 0.227451 )
material = SubResource( 64 )
scale = Vector2( 4, 4 )
z_index = 9
z_as_relative = false
texture = ExtResource( 28 )
region_enabled = true
region_rect = Rect2( 0, 96, 32, 32 )

[node name="Effects" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="DustParticle" parent="Effects" instance=ExtResource( 12 )]
modulate = Color( 0.85098, 0.85098, 0.85098, 1 )
material = SubResource( 65 )
position = Vector2( 0, 28 )
lifetime = 0.4
explosiveness = 0.67
randomness = 0.24
lifetime_randomness = 0.3
texture = ExtResource( 11 )
gravity = Vector2( 0, 2 )
initial_velocity = 45.0
damping = 43.2
damping_random = 0.31
scale_amount = 1.0
anim_offset = 1.0
anim_offset_random = 1.0

[node name="GhostHandler" parent="Effects" instance=ExtResource( 14 )]

[node name="TrailHandler" parent="Effects" instance=ExtResource( 25 )]
wildness = 50.0
gradient_col = SubResource( 66 )
width_curve = SubResource( 67 )
texture = ExtResource( 26 )

[node name="JumpParticles0" parent="Effects" instance=ExtResource( 27 )]
material = SubResource( 68 )
position = Vector2( -4, 20 )
lifetime = 0.45
local_coords = false

[node name="Camera" type="Camera2D" parent="."]
visible = false
position = Vector2( 0, -35 )
z_index = 100
current = true
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="Camera"]

[node name="Ball_Handler" type="Area2D" parent="."]
collision_mask = 4
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball_Handler"]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 69 )

[node name="Has_Ball_Position" type="Node2D" parent="Ball_Handler"]
position = Vector2( 8, 26 )

[connection signal="tween_completed" from="Camera/Tween" to="Camera" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Ball_Handler" to="Ball_Handler" method="_on_Ball_Handler_body_entered"]
